feat(skill curator): add an automatic skill curator to quality gate the skills repo